# multi_camera_case_detector

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_VM_REQUIREMENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  shopify-paketleme-tespit-sistemi.md
.github/workflows/: ci.yml
app/: __init__.py  app.py  camera_worker.py  config.py  healthcheck.py  logger.py  main.py  scheduler.py  settings.py  shopify_worker.py
app/detection/: barcode.py  ocr.py  paddle_ocr.py  types.py  voting.py  yolo_barcode.py
app/integrations/: shopify_auth.py  shopify_client.py
app/licensing/: __init__.py  keys.py  license.py
app/monitoring/: __init__.py  health.py
app/storage/: database.py  snapshots.py
app/web/: __init__.py  context.py  routes.py  security.py  server.py
app/web/static/: app.js  style.css
app/web/templates/: 404.html  _events_table.html  base.html  cameras.html  dashboard.html  event_detail.html  events.html  login.html  restarting.html
config/: config.yaml
scripts/: generate_license.py  test_camera.py  test_shopify.py
tests/: conftest.py  test_barcode.py  test_camera_settings.py  test_config.py  test_database.py  test_health.py  test_licensing.py  test_ocr.py  test_paddle_ocr.py  test_security.py  test_shopify_auth.py  test_shopify_client.py  test_snapshots.py  test_voting.py  test_web.py  test_yolo_barcode.py
